# Hello-NN

./: .gitignore  Cargo.toml  README.md
mnist-data-loader/: Cargo.toml
mnist-data-loader/src/: lib.rs
src/: lib.rs  util.rs
src/layer_impls/: dense_no_active.rs  mod.rs  relu.rs  sigmod.rs  softmax.rs
src/loss_impls/: cross_entropy.rs  mod.rs  mse.rs
tests/: test_ndarray.rs
