[package]
name = "hello-nn"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "mnist-data-loader"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
mnist-data-loader = { path = "./mnist-data-loader" }
anyhow = "1"
rand = "0.8"
